# handDemo

./: .gitignore  ADC_20260415_200242.txt  ADC_20260508_200242.txt  ALGORITHM_PORTING_TODO.md  CLAUDE.md  CMakeLists.txt  README.md  config.h  handDemo.sln  handDemo.vcxproj  handDemo.vcxproj.filters  hand_algorithm.cpp  hand_algorithm.h  hand_skeleton_viewer.cpp  hand_skeleton_viewer.h  main.cpp  main_back.cpp  matrix_hand_sdk.cpp  matrix_hand_sdk.h  sdk优化.md  serial_port_io.cpp  serial_port_io.h  优化.md  验收.md
.claude/: settings.local.json
docs/: api.md  calibration.md
